--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@artsy/fresnel": "^1.2.0",
+    "device": "^0.3.11",
     "next": "latest",
+    "next-useragent": "^2.1.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-responsive": "^8.1.0",
+    "styled-components": "^5.1.1",
+    "ua-parser-js": "^0.7.21",
+    "user-agents": "^1.0.559",
+    "useragent": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "babel-plugin-styled-components": "^1.10.7",
+    "cross-env": "^7.0.2"
   }
 }
