--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "dynamic-routing",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "build": "next build"
   },
   "license": "ISC",
   "dependencies": {
@@ -12,6 +12,7 @@
     "device": "^0.3.11",
     "next": "latest",
     "next-useragent": "^2.1.3",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-responsive": "^8.1.0",
