--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "node server.js",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "npx cross-env NODE_ENV=production node server.js",
     "build": "next build"
   },
   "license": "ISC",
@@ -15,15 +15,10 @@
     "@artsy/fresnel": "^1.2.0",
     "device": "^0.3.11",
     "next": "latest",
-    "next-useragent": "^2.1.3",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-responsive": "^8.1.0",
-    "styled-components": "^5.1.1",
-    "ua-parser-js": "^0.7.21",
-    "user-agents": "^1.0.559",
-    "useragent": "^2.3.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
